			SWI-Prolog ChangeLog
			====================

					--------------------------------------
					NOTE: Bug #<N> refers to bugs reported
					to the SWI-Prolog Bugzilla system at
					http://gollem.science.uva.nl/bugzilla/
					--------------------------------------

  * MODIFIED: The symbols in the range 128..255 are now considered SOLO
    characters, compatible to the documentation.   Ulrich Neumerkel.

  * FIXED: Various issues read dealing with Unicode and backquoted
    strings.   Ulrich Neumerkel.

  * ADDED: experimental --pldoc[=port] option to start PlDoc before loading
    an application as in "pl --pldoc -s myprogram.pl"

  * ADDED: library(clpfd) by Markus Triska.

  * FIXED: silently accept floats with illegal exponent.  Ulrich Neumerkel.

  * FIXED: Errors of atom_to_term/3.  Ulrich Neumerkel.

  * MODIFIED: Added noprofile declarations for findall, bagof, setof,
    call_cleanup and frieds.  Makes profile output more readable.

  * ENHANCED: Various issues around findall/3, bagof/3 and setof/3.  Not
    yet fully tested.

  * ADDED: findall/4.  Ulrich Neumerkel.

================================
VERSION 5.6.39 (August 08, 2007)
================================

  * FIXED: Windows: handling of //host.domain/path filenames.  Dave Eyers.

  * FIXED: Exception from call(1, a, b).  Ulrich Neumerkel.

  * ENHANCED: Trivial extra check in unify_with_occurs_check/2 to speed up
    a common case.  Ulrich Neumerkel.

  * MODIFIED:  Various issues in the Windows version.  Prolog now starts
    in <personal>\Prolog (typicall My Documents\Prolog) and personal settings
    is in <appdata>\SWI-Prolog (pl.ini) and <appdata>\xpce (Defaults,
    Geometry, emacs_bookmarks, etc.) <appdata> is typically called
    Application Data.  Michael Covington.

  * FIXED: plwin.exe, non-functioning <RETURN> in tracer and toplevel.
    Pierpaolo Bernardi

================================
VERSION 5.6.38 (August 02, 2007)
================================
